sb-status/cable-modem-scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cable-modem-scraper
  name: cable-modem-scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cable-modem-scraper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: cable-modem-scraper
    spec:
      containers:
      - image: chalko/cable-modem-scraper:latest
        imagePullPolicy: ""
        name: cable-modem-scraper
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
