sb-status/cable-modem-scraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: cable-modem-scraper
  name: cable-modem-scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cable-modem-scraper
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: cable-modem-scraper
    spec:
      containers:
      - image: chalko/cable-modem-scraper:latest
        imagePullPolicy: ""
        name: cable-modem-scraper
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: cable-modem-scraper
  name: cable-modem-scraper
spec:
  ports:
    - port: 5000
  selector:
    io.kompose.service: cable-modem-scraper
