sb-status/cable-modem-scraper-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cable-modem-scraper-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /cable-modem-scraper
            backend:
              serviceName: cable-modem-scraper
              servicePort: 5000
